--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.1.1"
   }
 }
